[package]
name = "game_state_learning"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tagiron_card = { git = "https://github.com/sou0913/tagiron_card.git", version = "0.1.1" }
itertools = "0.10.1"
serde_json = "1.0.68"
serde = "1.0.130"
serde_derive = "1.0.130"
anyhow = "1.0.44"
rand = "0.8.4"
